--- a/Base.Data/Base.Data.csproj
+++ b/Base.Data/Base.Data.csproj
@@ -58,9 +58,9 @@
     <Compile Include="Infrastructure\IUnitOfWork.cs" />
     <Compile Include="Infrastructure\AdoNetRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\SetRepository.cs" />
     <Compile Include="Repositories\ParametroRepository.cs" />
-    <Compile Include="Repositories\ModeloVersionRepository.cs" />
-    <Compile Include="Repositories\ModeloCasoRepository.cs" />
+    <Compile Include="Repositories\VersionRepository.cs" />
     <Compile Include="Repositories\MenuRepository.cs" />
     <Compile Include="Repositories\ModeloRepository.cs" />
     <Compile Include="Repositories\TipoIdentificacionRepository.cs" />
