--- a/Base.Model/Base.Model.csproj
+++ b/Base.Model/Base.Model.csproj
@@ -41,13 +41,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Models\Menu.cs" />
-    <Compile Include="Models\ModeloCaso.cs" />
     <Compile Include="Models\Modelo.cs" />
-    <Compile Include="Models\ModeloVersion.cs" />
+    <Compile Include="Models\Version.cs" />
+    <Compile Include="Models\Set.cs" />
     <Compile Include="Models\Parametro.cs" />
     <Compile Include="Models\TipoIdentificacion.cs" />
     <Compile Include="Models\Cliente.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\SetFormViewModel.cs" />
     <Compile Include="ViewModels\ParametroFormViewModel.cs" />
     <Compile Include="ViewModels\ClienteFormViewModel.cs" />
   </ItemGroup>
