--- a/Base.Web/Base.Web.csproj
+++ b/Base.Web/Base.Web.csproj
@@ -969,6 +969,8 @@
     <Content Include="Scripts\WebForms\MSAjax\MicrosoftAjaxTimer.js" />
     <Content Include="Scripts\WebForms\MSAjax\MicrosoftAjaxWebForms.js" />
     <Content Include="Scripts\WebForms\MSAjax\MicrosoftAjaxWebServices.js" />
+    <Content Include="Scripts\WebForms\Paginas\Administracion\subsets.js" />
+    <Content Include="Scripts\WebForms\Paginas\Administracion\sets.js" />
     <Content Include="Scripts\WebForms\Paginas\Administracion\parametros.js" />
     <Content Include="Scripts\WebForms\SmartNav.js" />
     <Content Include="Scripts\WebForms\TreeView.js" />
