--- a/Base.Web/packages.config
+++ b/Base.Web/packages.config
@@ -8,6 +8,7 @@
   <package id="bootstrap" version="3.0.0" targetFramework="net47" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net47" />
   <package id="EntityFramework.es" version="6.1.3" targetFramework="net47" />
+  <package id="EPPlus" version="4.5.1" targetFramework="net47" />
   <package id="jQuery" version="1.10.2" targetFramework="net47" />
   <package id="Microsoft.ApplicationInsights" version="2.2.0" targetFramework="net47" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.0.6" targetFramework="net47" />
