--- a/Base.Service/Base.Service.csproj
+++ b/Base.Service/Base.Service.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Infrastructure\EntityService.cs" />
     <Compile Include="Infrastructure\IEntityService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\ExceptionService.cs" />
     <Compile Include="Services\SetService.cs" />
     <Compile Include="Services\ParametroService.cs" />
     <Compile Include="Services\MultisetService.cs" />
