--- a/Base.Web/Web.config
+++ b/Base.Web/Web.config
@@ -12,6 +12,10 @@
     <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Server=localhost;Database=MICVNW;Integrated Security=True;" />
   </connectionStrings>
   <system.web>
+    <customErrors mode="On" defaultRedirect="ErrorApp.aspx">
+      <error statusCode="404" redirect="Error404.aspx" />
+      <error statusCode="500" redirect="Error500.aspx" />
+    </customErrors>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.7" />
     <httpRuntime targetFramework="4.7" />
