--- a/Base.Web/Web.config
+++ b/Base.Web/Web.config
@@ -9,10 +9,11 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Server=localhost;Database=MICVNW;Integrated Security=True;" />
+    <!-- <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Server=localhost;Database=MICVNW;Integrated Security=True;" /> -->
+    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Server=192.168.0.53;Database=MICVNW;User Id=sa;Password=MICV123*;" />
   </connectionStrings>
   <system.web>
-    <customErrors mode="On" defaultRedirect="ErrorApp.aspx">
+    <customErrors mode="Off" defaultRedirect="ErrorApp.aspx">
       <error statusCode="404" redirect="Error404.aspx" />
       <error statusCode="500" redirect="Error500.aspx" />
     </customErrors>
