--- a/Base.Web/Base.Web.csproj
+++ b/Base.Web/Base.Web.csproj
@@ -979,6 +979,7 @@
     <Content Include="Scripts\WebForms\MSAjax\MicrosoftAjaxTimer.js" />
     <Content Include="Scripts\WebForms\MSAjax\MicrosoftAjaxWebForms.js" />
     <Content Include="Scripts\WebForms\MSAjax\MicrosoftAjaxWebServices.js" />
+    <Content Include="Scripts\WebForms\Paginas\Administracion\multisets.js" />
     <Content Include="Scripts\WebForms\Paginas\Administracion\versionamientos.js" />
     <Content Include="Scripts\WebForms\Paginas\Administracion\subsets.js" />
     <Content Include="Scripts\WebForms\Paginas\Administracion\sets.js" />
