--- a/Base.Api/Base.Api.csproj
+++ b/Base.Api/Base.Api.csproj
@@ -163,11 +163,13 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
+    <Compile Include="Controllers\Api\AuthFactorySuiteController.cs" />
     <Compile Include="Controllers\Api\SetsController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\ServiceUrl.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="favicon.ico" />
