ajuste ap auth factorysuite

--- a/Base.Api/Base.Api.csproj
+++ b/Base.Api/Base.Api.csproj
@@ -197,6 +197,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Base.Data\Base.Data.csproj">
