--- a/Base.Api/packages.config
+++ b/Base.Api/packages.config
@@ -5,6 +5,7 @@
   <package id="Autofac.Web" version="4.0.0" targetFramework="net47" />
   <package id="Autofac.WebApi2" version="4.1.0" targetFramework="net47" />
   <package id="bootstrap" version="3.3.7" targetFramework="net47" />
+  <package id="EntityFramework" version="6.0.0" targetFramework="net47" />
   <package id="jQuery" version="3.3.1" targetFramework="net47" />
   <package id="Microsoft.ApplicationInsights" version="2.5.1" targetFramework="net47" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="2.4.0" targetFramework="net47" />
@@ -35,6 +36,8 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net47" />
   <package id="Modernizr" version="2.8.3" targetFramework="net47" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net47" />
+  <package id="Oracle.ManagedDataAccess" version="12.2.1100" targetFramework="net47" />
+  <package id="Oracle.ManagedDataAccess.EntityFramework" version="12.2.1100" targetFramework="net47" />
   <package id="Swashbuckle" version="5.6.0" targetFramework="net47" />
   <package id="Swashbuckle.Core" version="5.6.0" targetFramework="net47" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.4.1" targetFramework="net47" />
