--- a/Base.Data/Base.Data.csproj
+++ b/Base.Data/Base.Data.csproj
@@ -46,6 +46,12 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>lib\Oracle.DataAccess.dll</HintPath>
     </Reference>
+    <Reference Include="Oracle.ManagedDataAccess, Version=4.122.1.0, Culture=neutral, PublicKeyToken=89b483f429c47342, processorArchitecture=MSIL">
+      <HintPath>..\packages\Oracle.ManagedDataAccess.12.2.1100\lib\net40\Oracle.ManagedDataAccess.dll</HintPath>
+    </Reference>
+    <Reference Include="Oracle.ManagedDataAccess.EntityFramework, Version=6.122.1.0, Culture=neutral, PublicKeyToken=89b483f429c47342, processorArchitecture=MSIL">
+      <HintPath>..\packages\Oracle.ManagedDataAccess.EntityFramework.12.2.1100\lib\net45\Oracle.ManagedDataAccess.EntityFramework.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Configuration" />
@@ -85,14 +91,8 @@
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\CertificadoRepository.cs" />
     <Compile Include="Repositories\SetRepository.cs" />
-    <Compile Include="Repositories\ParametroRepository.cs" />
-    <Compile Include="Repositories\MultisetRepository.cs" />
-    <Compile Include="Repositories\SubsetRepository.cs" />
-    <Compile Include="Repositories\VersionRepository.cs" />
-    <Compile Include="Repositories\MenuRepository.cs" />
-    <Compile Include="Repositories\ModeloRepository.cs" />
-    <Compile Include="Repositories\TipoIdentificacionRepository.cs" />
     <Compile Include="Repositories\GenericRepository.cs" />
     <Compile Include="Xml\SqlManager.cs" />
   </ItemGroup>
