--- a/Base.Data/packages.config
+++ b/Base.Data/packages.config
@@ -5,4 +5,6 @@
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net47" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.5" targetFramework="net47" />
   <package id="Microsoft.Net.Compilers" version="2.1.0" targetFramework="net47" developmentDependency="true" />
+  <package id="Oracle.ManagedDataAccess" version="12.2.1100" targetFramework="net47" />
+  <package id="Oracle.ManagedDataAccess.EntityFramework" version="12.2.1100" targetFramework="net47" />
 </packages>
