--- a/Base.Model/Base.Model.csproj
+++ b/Base.Model/Base.Model.csproj
@@ -56,24 +56,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Dtos\CertificadoDto.cs" />
     <Compile Include="Dtos\UserToken.cs" />
     <Compile Include="Models\ApplicationRole.cs" />
     <Compile Include="Models\ApplicationUser.cs" />
-    <Compile Include="Models\Menu.cs" />
-    <Compile Include="Models\Modelo.cs" />
-    <Compile Include="Models\Multiset.cs" />
-    <Compile Include="Models\Subset.cs" />
-    <Compile Include="Models\Version.cs" />
+    <Compile Include="Models\Certificado.cs" />
     <Compile Include="Models\Set.cs" />
-    <Compile Include="Models\Parametro.cs" />
-    <Compile Include="Models\TipoIdentificacion.cs" />
-    <Compile Include="Models\Cliente.cs" />
+    <Compile Include="Models\Sustancia.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\SetFormViewModel.cs" />
-    <Compile Include="ViewModels\ParametroFormViewModel.cs" />
-    <Compile Include="ViewModels\ClienteFormViewModel.cs" />
-    <Compile Include="ViewModels\MultisetFormViewModel.cs" />
-    <Compile Include="ViewModels\SubsetFormViewModel.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
