--- a/Base.Service/Base.Service.csproj
+++ b/Base.Service/Base.Service.csproj
@@ -79,6 +79,9 @@
     <Compile Include="Infrastructure\EntityService.cs" />
     <Compile Include="Infrastructure\IEntityService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\LogConsultaService.cs" />
+    <Compile Include="Services\UserTokenService.cs" />
+    <Compile Include="Services\SustanciaService.cs" />
     <Compile Include="Services\ExceptionService.cs" />
     <Compile Include="Services\ApplicationRoleManager.cs" />
     <Compile Include="Services\ApplicationSignInManager.cs" />
