--- a/Base.Api/Web.config
+++ b/Base.Api/Web.config
@@ -4,6 +4,34 @@
   https://go.microsoft.com/fwlink/?LinkId=301879
   -->
 <configuration>
+  <system.diagnostics>
+    <sources>  
+      <source name="TraceSourceApp"   
+        switchName="sourceSwitch"   
+        switchType="System.Diagnostics.SourceSwitch">  
+        <listeners>  
+          <add name="console"   
+            type="System.Diagnostics.ConsoleTraceListener">  
+            <filter type="System.Diagnostics.EventTypeFilter"   
+              initializeData="Warning"/>  
+          </add>  
+          <add name="myListener"/>  
+          <remove name="Default"/>  
+        </listeners>  
+      </source>  
+    </sources>  
+    <switches>  
+      <add name="sourceSwitch" value="Warning"/>  
+    </switches>  
+    <sharedListeners>  
+      <add name="myListener"   
+        type="System.Diagnostics.TextWriterTraceListener"   
+        initializeData="myListener.log">  
+        <filter type="System.Diagnostics.EventTypeFilter"   
+          initializeData="Error"/>  
+      </add>  
+    </sharedListeners>
+  </system.diagnostics>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
