READY accion getcertificado terminada

--- a/Base.Api/Web.config
+++ b/Base.Api/Web.config
@@ -3,35 +3,7 @@
   Para obtener más información sobre cómo configurar la aplicación ASP.NET, visite
   https://go.microsoft.com/fwlink/?LinkId=301879
   -->
-<configuration>
-  <system.diagnostics>
-    <sources>  
-      <source name="TraceSourceApp"   
-        switchName="sourceSwitch"   
-        switchType="System.Diagnostics.SourceSwitch">  
-        <listeners>  
-          <add name="console"   
-            type="System.Diagnostics.ConsoleTraceListener">  
-            <filter type="System.Diagnostics.EventTypeFilter"   
-              initializeData="Warning"/>  
-          </add>  
-          <add name="myListener"/>  
-          <remove name="Default"/>  
-        </listeners>  
-      </source>  
-    </sources>  
-    <switches>  
-      <add name="sourceSwitch" value="Warning"/>  
-    </switches>  
-    <sharedListeners>  
-      <add name="myListener"   
-        type="System.Diagnostics.TextWriterTraceListener"   
-        initializeData="myListener.log">  
-        <filter type="System.Diagnostics.EventTypeFilter"   
-          initializeData="Error"/>  
-      </add>  
-    </sharedListeners>
-  </system.diagnostics>
+<configuration>  
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
@@ -153,4 +125,33 @@
       </dataSources>
     </version>
   </oracle.manageddataaccess.client>
+<system.diagnostics>
+  <trace autoflush="true"/>
+    <sources>  
+      <source name="TraceSourceApp"   
+        switchName="sourceSwitch"   
+        switchType="System.Diagnostics.SourceSwitch">  
+        <listeners>  
+          <add name="console"   
+            type="System.Diagnostics.ConsoleTraceListener">  
+            <filter type="System.Diagnostics.EventTypeFilter"   
+              initializeData="Warning"/>  
+          </add>  
+          <add name="myListener"/>  
+          <remove name="Default"/>  
+        </listeners>  
+      </source>  
+    </sources>  
+    <switches>  
+      <add name="sourceSwitch" value="Warning"/>  
+    </switches>  
+    <sharedListeners>  
+      <add name="myListener"   
+        type="System.Diagnostics.TextWriterTraceListener"   
+        initializeData="c:\myListener.log">  
+        <filter type="System.Diagnostics.EventTypeFilter"   
+          initializeData="Warning"/>  
+      </add>  
+    </sharedListeners>
+  </system.diagnostics>
 </configuration>
