--- a/Base.Model/Base.Model.csproj
+++ b/Base.Model/Base.Model.csproj
@@ -56,6 +56,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Dtos\TipoFallaDto.cs" />
     <Compile Include="Models\Log.cs" />
     <Compile Include="Models\Location.cs" />
     <Compile Include="Dtos\CertificadoDto.cs" />
@@ -65,6 +66,7 @@
     <Compile Include="Models\Certificado.cs" />
     <Compile Include="Models\Set.cs" />
     <Compile Include="Models\Sustancia.cs" />
+    <Compile Include="Models\TipoFalla.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\SetFormViewModel.cs" />
   </ItemGroup>
