WIP-Consulta consumo masivo

--- a/Base.Api/Web.config
+++ b/Base.Api/Web.config
@@ -16,7 +16,8 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <connectionStrings>
-    <add name="DefaultConnection" providerName="Oracle.ManagedDataAccess.Client" connectionString="User Id=usr_sicoqv1;Password=PSI_2013;Data Source=Sicoq"/>
+    <!--<add name="DefaultConnection" providerName="Oracle.ManagedDataAccess.Client" connectionString="User Id=usr_factkorysuitev1;Password=PSI_2013;Data Source=ORCL_QAS"/>-->
+    <add name="DefaultConnection" connectionString="data source=ORCL_QAS; User Id=usr_sicoqv1;Password=PSI_2013;" providerName="Oracle.DataAccess.Client"/>
     <!--<add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Server=localhost;Database=MICVNW;Integrated Security=True;" />-->
     <!--<add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Server=192.168.0.53;Database=MICVNW;User Id=sa;Password=MICV123*;" />-->
     <!--<add name="OracleDbContext" providerName="Oracle.ManagedDataAccess.Client" connectionString="User Id=oracle_user;Password=oracle_user_password;Data Source=oracle" />-->
@@ -121,7 +122,7 @@
   <oracle.manageddataaccess.client>
     <version number="*">
       <dataSources>
-        <dataSource alias="Sicoq" descriptor="(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=190.85.15.22)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=ORCL))) "/>
+        <dataSource alias="Sicoq" descriptor="(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=185.50.185.33)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=ORCL_QAS))) "/>
       </dataSources>
     </version>
   </oracle.manageddataaccess.client>
