--- a/Base.Data/App.config
+++ b/Base.Data/App.config
@@ -39,12 +39,12 @@
   <oracle.manageddataaccess.client>
     <version number="*">
       <dataSources>
-        <dataSource alias="Sicoq" descriptor="(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=190.85.15.22)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=ORCL))) "/>
+        <dataSource alias="Sicoq" descriptor="(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=185.50.185.33)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=ORCL_QAS))) "/>
       </dataSources>
     </version>
   </oracle.manageddataaccess.client>
   <connectionStrings>
-    <add name="DefaultConnection" providerName="Oracle.ManagedDataAccess.Client" connectionString="User Id=usr_sicoq;Password=PSI_2013;Data Source=Sicoq"/>
+    <add name="DefaultConnection" providerName="Oracle.ManagedDataAccess.Client" connectionString="User Id=usr_factorysuitev1;Password=PSI_2013;Data Source=ORCL_QAS"/>
   <!--<add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Server=DS-11261;Database=Sicoq;Trusted_Connection=False;User Id=sa;Password=PSI_2013" />-->
   </connectionStrings>
 </configuration>
